--- a/assets/sass/organisms/_main-content.scss
+++ b/assets/sass/organisms/_main-content.scss
@@ -50,7 +50,7 @@
 }
 
 .main__article {
-	margin-top: 6em;
+	margin-top: 11%;
 }
 
 // Breakpoints
