--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -5,6 +5,7 @@
 // Base colors
 $base-color: #9E372F; //#B63F3F;
 $positive-color: #58b763; //#7D9C5B;
+$emerald-color: #4EA358;
 $negative-color: #E24B4B;
 $primary-complementary-color: #69A996;
 
